# urlencode

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: main.rs
tests/: urlencode_test.rs
